@@ -143,5 +143,5 @@ void CBeamLaser::Fire(void)
 	}
 	float	intensity=1-(curLength)/(range*2);
 	if(curLength<maxLength)
-		helper->Explosion(hitPos,damages*intensity,areaOfEffect,weaponDef->edgeEffectivness,owner, true, 1.0f, false,weaponDef->explosionGenerator);
+		helper->Explosion(hitPos,damages*intensity,areaOfEffect,weaponDef->edgeEffectivness,weaponDef->explosionSpeed,owner, true, 1.0f, false,weaponDef->explosionGenerator);
 }
